REGRESSION (r278062): Multiple backgrounds with "background-blend-mode: difference" breaks https://bugs.webkit.org/show_bug.cgi?id=246590 rdar://101257606

Reviewed by Tim Horton.

r278062 replaced the call to GraphicsContextCG::setPlatformCompositeOperation()
by GraphicsContext::setCompositeOperation() in GraphicsContextCG::drawPattern().
setCompositeOperation() is platform independent and should not be called from
GraphicsContextCG methods. Call GraphicsContextCG::setCGBlendMode() instead.

* LayoutTests/fast/backgrounds/background-blend-mode-difference-expected.html: Added.
* LayoutTests/fast/backgrounds/background-blend-mode-difference.html: Added.
* LayoutTests/platform/win/TestExpectations:
* Source/WebCore/platform/graphics/cg/GraphicsContextCG.cpp:
(WebCore::GraphicsContextCG::drawPattern):

Canonical link: https://commits.webkit.org/256578@main